--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
       href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;700&family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="/CSS/main.min.css">
+    <link rel="stylesheet" href="./CSS/main.min.css">
   </head>
   <body>
     <!-- Heder -->
