--- a/index.html
+++ b/index.html
@@ -485,7 +485,7 @@
               </svg>
             </div>
             <div class="field-textarea">
-            <textarea class="modal-input textarea" name="comment" cols="30" rows="10" placeholder="Комментарий"></textarea>
+            <textarea class="textarea" name="comment" cols="30" rows="10" placeholder="Комментарий"></textarea>
           
             <label class="field-checkbox">
             <input class="checkbox" type="checkbox">
